# scratch2c

./: .gitignore  README.md  build.py  example.c  meson.build  run.py  scratch2c.py
include/scratch/: _scratch.h  control.h  engine.h  looks.h  math.h  motion.h  operators.h  platform.h  project.h  renderer.h  scratch.h  sensing.h  sprite.h  types.h  variable.h
include/scratch/blocks/: looks.h  motion.h  operators.h  sensing.h  variable.h
include/scratch/core/: array.h  file.h  math.h  platform.h  prng.h  types.h
include/scratch/engine/: engine.h  project.h  renderer.h
scripts/: install_wraps.py
src_c/: engine.c  renderer.c
src_c/core/: array.c
src_c/engine/: engine.c  renderer.c
src_c/shaders/: sprite.fsh  sprite.vsh
src_py/: builder.py  codegen.py  common.py  generated.c  syntaxtree.py  terminal.py  transpiler.py  visualize.py
